<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="btnBstService">20%</string>
    <string name="btnAdquateService">15 %</string>
    <string name="btnOtherService">10 %</string>
    <string name="TipPrompt">Tip is:</string>
    <string name="etValue">Enter a dollar amount.</string>

</resources>
